fix(ui): left truncate issue id on group details (#12948)
* fix(ui): left truncate issue id on group details header

* Fix flexbox quirks

* Update formatting and snapshots

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -85,9 +85,18 @@
   }
 
   .count {
-    &.short-id-box span {
-      font-size: 19px;
-      line-height: 1.4;
+    &.short-id-box {
+      min-width: 0;
+
+      span {
+        font-size: 18px;
+        line-height: 1.45;
+        display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        direction: rtl;
+      }
     }
 
     span {
